fix some issue add centimeter in application

--- a/IdentityService/Pages/Index.cshtml
+++ b/IdentityService/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 
 <div class="welcome-page">
     <h1>
-        <img src="~/duende-logo.svg" class="logo">
+        <img src="~/old-logo.svg" class="logo">
         Welcome to Art Elevate Identity Server
         @* <small class="text-muted">(version @Model.Version)</small> *@
     </h1>
