--- a/IdentityService/Pages/Shared/_Nav.cshtml
+++ b/IdentityService/Pages/Shared/_Nav.cshtml
@@ -8,10 +8,10 @@
 }
 
 <div class="nav-page">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
         <a href="~/" class="navbar-brand">
-            <img src="~/duende-logo.svg" class="icon-banner">
+            <img src="~/old-logo.svg" class="icon-banner">
             Art Elevate SSO
         </a>
 
